[package]
name = "bevy_test2"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = {version = "0.8.1", features = ["dynamic"]}
bevy-inspector-egui = "0.12.1" 
bevy_prototype_debug_lines = {version = "0.8.1", features = ["3d"]}
